# autocomplete

./: .gitignore  README.md
autocomplete-rs/: Cargo.toml  LICENSE  README.md  build.rs
autocomplete-rs/examples/: client.rs
autocomplete-rs/proto/: autocomplete.proto
autocomplete-rs/schema/: schema.graphql
autocomplete-rs/src/: autocomplete.rs  constants.rs  dictionary.rs  graphql.rs  index.rs  lib.rs  main.rs  parameters.rs  probe.rs  server.rs  string_pool.rs  trie.rs  types.rs
autocomplete-rs/tests/: constants_tests.rs  parameters_tests.rs  probe_tests.rs
doc/: activity_diagram.md  class_diagram.md  component_diagram.md  cpp_structure.md  data_structures.md
