[package]
name = "autocomplete-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-graphql = "6.0"
async-graphql-axum = "6.0"
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.10"
