[package]
name = "autocomplete-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-graphql = "6.0"
async-graphql-axum = "6.0"
axum = { version = "0.6", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.10"
